styleable属性名重构

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="common_background_drawable">
+    <declare-styleable name="common_background">
         <attr name="stateful" format="boolean"/>
         <attr name="shape">
             <enum name="rect" value="0"/>
