add CommonBackgroundLayouts, add unchecked/checked states

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,13 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="btn1"
-            myapp:color_disabled="@android:color/darker_gray"
-            myapp:color_normal="@color/lighter_blue"
-            myapp:color_pressed="@color/darker_blue"
-            myapp:fill_mode="solid"
+            myapp:colorDisabled="@android:color/darker_gray"
+            myapp:colorNormal="@color/lighter_blue"
+            myapp:colorPressed="@color/darker_blue"
+            myapp:fillMode="solid"
             myapp:shape="rect"
             myapp:stateful="true"
-            myapp:stroke_mode="none"/>
+            myapp:strokeMode="none"/>
 
         <com.ytb.myapp.widget.commonbackground.CommonBackgroundButton
             android:id="@+id/btn2"
@@ -41,101 +41,27 @@
             android:layout_weight="1"
             android:gravity="center"
             android:text="btn2"
-            myapp:color_disabled="@android:color/darker_gray"
-            myapp:color_normal="@color/lighter_blue"
-            myapp:color_pressed="@color/darker_blue"
-            myapp:color_stroke="@android:color/darker_gray"
             myapp:bitmap="@mipmap/icon"
-            myapp:fill_mode="bitmap|solid"
-            myapp:scale_type="fit_frame"
+            myapp:colorDisabled="@android:color/darker_gray"
+            myapp:colorNormal="@color/lighter_blue"
+            myapp:colorPressed="@color/darker_blue"
+            myapp:colorStroke="@android:color/darker_gray"
+            myapp:fillMode="bitmap|solid"
+            myapp:scaleType="fitXY"
             myapp:shape="side_circle_rect"
             myapp:stateful="true"
-            myapp:stroke_mode="none"/>
+            myapp:strokeMode="none"/>
     </LinearLayout>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <com.ytb.myapp.widget.commonbackground.CommonBackgroundButton
-            android:id="@+id/btn3"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="btn3"
-            myapp:color_disabled="@android:color/darker_gray"
-            myapp:color_normal="@android:color/transparent"
-            myapp:color_pressed="@color/lighter_blue"
-            myapp:color_stroke="@color/lighter_blue"
-            myapp:fill_mode="solid"
-            myapp:shape="rect"
-            myapp:stateful="true"
-            myapp:stroke_dash_solid="10dp"
-            myapp:stroke_dash_space="10dp"
-            myapp:stroke_mode="dash"
-            myapp:stroke_width="5dp"/>
-
-        <com.ytb.myapp.widget.commonbackground.CommonBackgroundButton
-            android:id="@+id/btn4"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="btn4"
-            android:textColor="@android:color/white"
-            myapp:bitmap="@mipmap/ic_launcher"
-            myapp:color_disabled="@android:color/darker_gray"
-            myapp:color_normal="#FFFFFFFF"
-            myapp:color_pressed="#88FFFFFF"
-            myapp:color_stroke="@android:color/darker_gray"
-            myapp:fill_mode="solid|bitmap"
-            myapp:radius="10dp"
-            myapp:scale_type="at_least"
-            myapp:shape="round_rect"
-            myapp:stateful="true"
-            myapp:stroke_mode="solid"
-            myapp:stroke_width="5dp"/>
-    </LinearLayout>
-
-    <com.ytb.myapp.widget.commonbackground.CommonBackgroundButton
-        android:id="@+id/btn5"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp"
+    <com.ytb.myapp.widget.commonbackground.CommonBackgroundCheckBox
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:gravity="center"
-        android:text="btn5"
-        myapp:color_disabled="@android:color/darker_gray"
-        myapp:color_normal="@color/lighter_blue"
-        myapp:color_pressed="@color/darker_blue"
-        myapp:color_stroke="@android:color/darker_gray"
-        myapp:fill_mode="solid"
-        myapp:shape="circle"
-        myapp:stateful="true"
-        myapp:stroke_mode="solid"
-        myapp:stroke_width="5dp"/>
-
-    <com.ytb.myapp.widget.commonbackground.CommonBackgroundImageView
-        android:id="@+id/btn6"
-        android:layout_width="300dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:textColor="@android:color/white"
-        myapp:bitmap="@mipmap/icon"
-        myapp:color_disabled="#88888888"
-        myapp:color_normal="#FFFFFFFF"
-        myapp:color_pressed="#88FFFFFF"
-        myapp:color_stroke="@color/darker_blue"
-        myapp:fill_mode="solid|bitmap"
-        myapp:scale_type="at_least"
-        myapp:shape="circle"
-        myapp:stateful="true"
-        myapp:stroke_mode="none"
-        myapp:stroke_width="5dp"/>
+        android:text="btn6"
+        myapp:colorChecked="@color/darker_blue"
+        myapp:colorUnchecked="@color/lighter_blue"
+        myapp:shape="side_circle_rect"
+        myapp:stateMode="check"
+        myapp:stateful="true"/>
 
 </LinearLayout>
